# ratatouille-royale

./: .gitignore  .pre-commit-config.yaml  README.md  _build.py  build.py  effects.typ  main.typ  overview.typ  pyproject.toml  requirements.txt  template.typ  terminology.typ  theme.typ
.github/workflows/: pre-commit.yml
Tiled/: .gitignore
Tiled/Raw Maps/Starting Kitchen/: cleaner.js  hex.tsx  number_grid.tsx  rrmap.tmj  starting-kitchen.rrmap  tileset.tsx
Tiled/rrmap-making-kit/: README.md  hex.tsx  number_grid.tsx  rrmap-making-kit.tiled-session  rrmap.tmj.original  rrmap.tmx  tileset.tsx  tileset.tsx.original
mechanics/: core.typ  progression.typ
progression/: forges.typ  gacha_pool.typ
rodent/: class.typ  stats.typ
rodent/rodents/: duelist.typ  specialist.typ  support.typ  tank.typ  vanguard.typ
src/: edit_map.py  git_reset_map_making_kit.py  main.py  render_test.py  rrmap.py  tiled_cli.py
src/ratroyale/: __init__.py  __main__.py  board.py  coordination_manager.py  entity.py  event_tokens.py  feature.py  game.py  game_data.py  game_logic.py  game_manager.py  game_states.py  hexagon.py  map.py  side.py  tile.py  utils.py
src/ratroyale/assets/themes/: default.json  inspect_entity.json  inspect_history.json
src/ratroyale/backend/: __hexagon.py  __init__.py  board.py  crumbs_per_turn_modifier.py  cython_board.c  cython_board.pyi  cython_board.pyx  damage_heal_source.py  entity.py  entity_effect.py  error.py  feature.py  game_event.py  game_manager.py  hexagon.c  hexagon.pxd  hexagon.py  hexagon.pyi  hexagon.pyx  instant_kill.py  map.py  side.py  skill_callback.py  source_of_damage_or_heal.py  tags.py  tile.py  tiled_tmj.py  timer.py
src/ratroyale/backend/ai/: ai_action.py  base_ai.py  random_ai.py  rushb_ai.py
src/ratroyale/backend/effects/: global_rodent_effects.py
src/ratroyale/backend/entities/: rodent.py
src/ratroyale/backend/features/: __init__.py  commmon.py  common.py
src/ratroyale/backend/player_info/: ai_player_info.py  forges.py  gacha.py  player_info.py  preset_player_info.py  squeak.py  squeak_set.py
src/ratroyale/entities/: rodent.py
src/ratroyale/event_tokens/: base.py  game_action.py  game_token.py  input_token.py  page_token.py  payloads.py  visual_token.py
src/ratroyale/frontend/: feature_texture.py
src/ratroyale/frontend/gesture/: gesture_data.py  gesture_reader.py
src/ratroyale/frontend/gesture_management/: gesture_data.py  gesture_reader.py
src/ratroyale/frontend/pages/: __init__.py
src/ratroyale/frontend/visual/: renderer.py  screen_constants.py
src/ratroyale/input/: HOW_TO_USE.txt  __init__.py  constants.py  coordination_manager.py  event_token.py  gesture_context_manager.py  gesture_dispatcher.py  gesture_interpreter.py  gesture_reader.py  gui_event_constants.py  gui_manager.py  input_bindings.py  input_dispatcher.py  input_event.py  input_manager.py  renderer.py
src/ratroyale/input/dispatch_management/: action_name.py  input_bindings.py  input_manager.py
src/ratroyale/input/gesture_management/: gesture_data.py  gesture_reader.py  gesture_type.py
src/ratroyale/input/interactables_management/: interactable.py  interaction_type.py
src/ratroyale/input/page/: __init__.py  gesture_reader.py  interactable.py  page.py  page_config.py  page_config_options.py  page_creator.py  page_factory.py  page_manager.py  (+2 more)
src/ratroyale/map_file/: starting-kitchen.rrmap
src/ratroyale/player_info/: player_info.py  squeak_set.py
src/ratroyale/render/: gesture_interpreter.py  input_manager.py  renderer.py  visual_manager  visual_manager.py
src/ratroyale/visual/: dummy_game_objects.py  game_obj_to_sprite_registry.py  renderer.py  screen_constants.py  sprite_registry.py  visual_component.py  visual_manager.py
tests/backend/: __init__.py  ai.py  conftest.py  test_ai.py  test_board.py  test_map.py  test_rodent.py  test_side.py
tests/backend/player_info/: conftest.py  test_player_info.py
tricks/: defense.typ  offense.typ  utility.typ
(+123 files in other folders)
