[project]
name = "ratatouille-royale"
version = "0.1.0"
description = ""
authors = [
    {name = "WingedSeal", email = "wingedseal@iusevimbtw.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce (==2.5.5)",
    "pygame-gui (==0.6.14)",
    "python-i18n (==0.3.9)",
    "pytweening (==1.2.0)"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ratroyale*"]

[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
ratroyale = "main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
